feat: Add PDF manipulation and generation capabilities
Introduces the `pdf-lib` library to enable programmatic PDF manipulation, including adding fields and generating signed documents. This update also refactors recipient and document types to include more detailed audit information and introduces a new hook `usePdfGenerator` to abstract PDF generation logic. New UI elements and logic for handling document downloading and duplication have been added to the dashboard and editor pages.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^7.9.1",
     "react-dnd": "^16.0.1",
     "pdfjs-dist": "^4.3.136",
-    "react-dnd-html5-backend": "^16.0.1"
+    "react-dnd-html5-backend": "^16.0.1",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
