--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "uuid": "^13.0.0",
     "react-router-dom": "^7.9.1",
     "react-dnd": "^16.0.1",
-    "pdfjs-dist": "^4.3.136",
+    "pdfjs-dist": "4.3.136",
     "react-dnd-html5-backend": "^16.0.1",
     "pdf-lib": "^1.17.1"
   },
